--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <!-- Favicon here -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
+    <base href="/WDD-330---FINAL-PROJECT/">
 </head>
 <body>
     <header class="header" id="header"></header>
