--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Favicon here -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-    <base href="/WDD-330---FINAL-PROJECT/">
+    <base href="https://sebastian-molero.github.io/WDD-330---FINAL-PROJECT/">
 </head>
 <body>
     <header class="header" id="header"></header>
