--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <header class="header">
         <div class="header-logo-container">
-            <img src="/images/IUM Gallery Logo White.webp" alt="IUM Logo">
+            <img src="images/IUM Gallery Logo White.webp" alt="IUM Logo">
         </div>
         <nav class="nav" id="nav">
             <ul class="nav-list">
