--- a/details/artist_details.html
+++ b/details/artist_details.html
@@ -59,6 +59,7 @@
                     <p><strong>Biography:</strong></p>
                     <p id="artistBio"></p>
                 </div>
+                <button id="favArtistBtn">Add to Favorites</button>
             </div>
         </section>
     </main>
