--- a/favorites/favorites.html
+++ b/favorites/favorites.html
@@ -35,7 +35,7 @@
                 <li class="nav-list-item"><a href="../index.html" class="nav-link">Home</a></li>
                 <li class="nav-list-item"><a href="../search/search.html" class="nav-link">Search</a></li>
                 <li class="nav-list-item"><a href="../artists/artists.html" class="nav-link">Artists</a></li>
-                <li class="nav-list-item"><a href="favorites/favorites.html" class="nav-link">Favorites</a></li>
+                <li class="nav-list-item"><a href="favorites.html" class="nav-link">Favorites</a></li>
             </ul>
         </nav>
         
