--- a/search/search.html
+++ b/search/search.html
@@ -33,7 +33,7 @@
         <nav class="nav" id="nav">
             <ul class="nav-list">
                 <li class="nav-list-item"><a href="../index.html" class="nav-link">Home</a></li>
-                <li class="nav-list-item"><a href="#" class="nav-link">Search</a></li>
+                <li class="nav-list-item"><a href="search.html" class="nav-link">Search</a></li>
                 <li class="nav-list-item"><a href="../artists/artists.html" class="nav-link">Artists</a></li>
                 <li class="nav-list-item"><a href="../favorites/favorites.html" class="nav-link">Favorites</a></li>
             </ul>
