--- a/artists/artists.html
+++ b/artists/artists.html
@@ -34,7 +34,7 @@
             <ul class="nav-list">
                 <li class="nav-list-item"><a href="../index.html" class="nav-link">Home</a></li>
                 <li class="nav-list-item"><a href="../search/search.html" class="nav-link">Search</a></li>
-                <li class="nav-list-item"><a href="#" class="nav-link">Artists</a></li>
+                <li class="nav-list-item"><a href="artists.html" class="nav-link">Artists</a></li>
                 <li class="nav-list-item"><a href="../favorites/favorites.html" class="nav-link">Favorites</a></li>
             </ul>
         </nav>
