routes, animations, styles

--- a/details/artist_details.html
+++ b/details/artist_details.html
@@ -28,7 +28,7 @@
 <body>
     <header class="header">
         <div class="header-logo-container">
-            <img src="../images/IUM Gallery Logo White.webp" alt="IUM Logo">
+            <img src="../images/IUM_Gallery_Logo_White.webp" alt="IUM Logo">
         </div>
         <nav class="nav" id="nav">
             <ul class="nav-list">
@@ -40,16 +40,16 @@
         </nav>
         
         <button class="nav-toggle" id="nav-toggle">
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
         </button>
     
     </header>
     <main>
         <section class="artist-detail-section">
             <div class="artist-image-container">
-                <img src="" alt="Artist Image" id="artistImage">
+                <img src="../images/img_not_available.webp" alt="Artist Image" id="artistImage">
             </div>
             <div class="artist-details-container">
                 <h2 id="artistName">ArtistName</h2>
