--- a/details/artwork_details.html
+++ b/details/artwork_details.html
@@ -28,7 +28,7 @@
 <body>
     <header class="header">
         <div class="header-logo-container">
-            <img src="../images/IUM Gallery Logo White.webp" alt="IUM Logo">
+            <img src="../images/IUM_Gallery_Logo_White.webp" alt="IUM Logo">
         </div>
         <nav class="nav" id="nav">
             <ul class="nav-list">
@@ -40,15 +40,15 @@
         </nav>
         
         <button class="nav-toggle" id="nav-toggle">
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
         </button>
     </header>
     <main>
         <section class="artwork-detail-section">
             <div class="artwork-image-container">
-                <img id="artworkImage" src="" alt="Artwork Image">
+                <img id="artworkImage" src="../images/img_not_available.webp" alt="Artwork Image">
             </div>
             <div class="artwork-details-container">
                 <h2 id="artworkTitle">Artwork Title</h2>
