--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <header class="header">
         <div class="header-logo-container">
-            <img src="images/IUM Gallery Logo White.webp" alt="IUM Logo">
+            <img src="images/IUM_Gallery_Logo_White.webp" alt="IUM Logo">
         </div>
         <nav class="nav" id="nav">
             <ul class="nav-list">
@@ -40,18 +40,16 @@
         </nav>
         
         <button class="nav-toggle" id="nav-toggle">
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
         </button>
     </header>
     <section class="hero">
         <div class="hero-content">
             <h1>Discover, learn, and collect artworks in a museum-like experience.</h1>
             <p>Explore curated collections, dive into detailed storied behind each piece, and build personal galleries to share with others.</p>
-            <button>
-                <a href="search/search.html" class="search">Discover now</a>
-            </button>
+            <button onclick="location.href='search/search.html'" class="search">Discover now</button>
         </div>
         <div class="hero-image">
             <picture>
@@ -149,9 +147,7 @@
         </section>
         <section class="cta-banner">
             <h2>Start Your Journey in Art Today</h2>
-            <button>
-                <a href="search/search.html" class="search">Explore the Collection</a>
-            </button>
+            <button onclick="location.href='search/search.html'" class="search">Explore the Collection</button>
         </section>
     </main>
     <footer class="footer">
