--- a/search/search.html
+++ b/search/search.html
@@ -28,7 +28,7 @@
 <body>
     <header class="header">
         <div class="header-logo-container">
-            <img src="../images/IUM Gallery Logo White.webp" alt="IUM Logo">
+            <img src="../images/IUM_Gallery_Logo_White.webp" alt="IUM Logo">
         </div>
         <nav class="nav" id="nav">
             <ul class="nav-list">
@@ -40,16 +40,16 @@
         </nav>
         
         <button class="nav-toggle" id="nav-toggle">
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
         </button>
     </header>
     <main>
         <section class="search-bar">
             <h2>Search the Collection</h2>
             <form action="javascript:void(0)" onsubmit="return false" id="searchForm">
-                <input type="text" name="" id="query" placeholder="Search by title or artist">
+                <input type="text" id="query" placeholder="Search by title or artist">
                 <select id="classification">
                     <option value="">All types</option>
                     <option value="Paintings">Paintings</option>
