--- a/artists/artists.html
+++ b/artists/artists.html
@@ -28,7 +28,7 @@
 <body>
     <header class="header">
         <div class="header-logo-container">
-            <img src="../images/IUM Gallery Logo White.webp" alt="IUM Logo">
+            <img src="../images/IUM_Gallery_Logo_White.webp" alt="IUM Logo">
         </div>
         <nav class="nav" id="nav">
             <ul class="nav-list">
@@ -40,9 +40,9 @@
         </nav>
         
         <button class="nav-toggle" id="nav-toggle">
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
-            <div class="nav-toggle-bar"></div>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
+            <span class="nav-toggle-bar"></span>
         </button>
     </header>
 
