--- a/details/artist_details.html
+++ b/details/artist_details.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
         
-        <button class="nav-toggle" id="nav-toggle">
+        <button class="nav-toggle" id="nav-toggle" aria-label="open menu">
             <span class="nav-toggle-bar"></span>
             <span class="nav-toggle-bar"></span>
             <span class="nav-toggle-bar"></span>
